[gd_scene load_steps=2 format=3 uid="uid://digwf2yyqlhm7"]

[ext_resource type="Script" uid="uid://d00yebabqoofx" path="res://scripts/cellphonemenu_script.gd" id="1_gyxkl"]

[node name="CellphoneMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gyxkl")

[node name="ButtonMenu" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="ButtonMenu"]

[node name="SideMenu" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -902.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SideMenu"]
layout_mode = 2

[node name="IconHome" type="TextureButton" parent="SideMenu/VBoxContainer"]
layout_mode = 2

[node name="IconProfile" type="TextureButton" parent="SideMenu/VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HomeScreen" type="Panel" parent="ContentContainer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ProfileScreen" type="Panel" parent="ContentContainer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
